:ambulance: Added next config

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.4.1",
+    "dotenv-load": "^2.0.0",
     "emotion-theming": "^10.0.27",
     "next": "^9.1.6",
+    "next-env": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
