--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "bootstrap": "^4.4.1",
     "dotenv-load": "^2.0.0",
     "emotion-theming": "^10.0.27",
+    "formik": "^2.0.8",
     "next": "^9.1.6",
     "next-env": "^1.1.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.0",
     "@types/react": "^16.9.17",
+    "@types/yup": "^0.26.27",
     "typescript": "^3.7.4"
   }
 }
